basic tokens view

--- a/SPA_Client/index.html
+++ b/SPA_Client/index.html
@@ -64,7 +64,7 @@
     <script src="app/Controllers/LoginCtrl.js"></script>
     <script src="app/Controllers/NavigationCtrl.js"></script>
     <script src="app/Controllers/LayoutCtrl.js"></script>
-
+    <script src="app/Controllers/TokensCtrl.js"></script>
 
 </body>
 </html>
